--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/main-header/main-header.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/main-header/main-header.component.css
@@ -1,6 +1,12 @@
 .header {
   display: grid;
   grid-template-columns: auto 2fr auto;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  backdrop-filter: blur(15px) brightness(0.98) opacity(1.2);
+  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px;
 }
 
 .left-corner {
@@ -40,13 +46,15 @@ a {
 }
 
 button{
-  font-size: 15px;
   border: 2px solid var(--white);
   border-radius: 5px;
   background-color: var(--red-color);
   color: var(--white);
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
   transition: transform 300ms ease-in-out;
+  width: 80px;
+  height: 40px;
+  font-size: 18px;
 }
 
 button:hover {
@@ -59,9 +67,7 @@ button>a{
 }
 
 .log-in-btn {
-  width: 100px;
-  height: 50px;
-  font-size: 20px;
+
 }
 
 i {
