--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.css
@@ -1,171 +1,228 @@
-.container {
+main {
+  min-width: 100vw;
+  height: 100vh;
   position: relative;
+  z-index: 0;
+  text-align: center;
 }
 
-.background>img {
-  background-size: cover;
-  background-position: center center;
-  position: fixed;
-  top: 0;
-  left: 0;
+main::before {
+  content: "";
   width: 100%;
   height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-image: url("/assets/images/background-user_profile.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   z-index: -1;
+  filter: blur(4px) brightness(0.9);
 }
 
+
 .user {
-  position: absolute;
-  top: 50px;
-  left: 35%;
-  transform: translateX(-50%);
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 10px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
-  width: 1000px;
+  margin-top: 1rem;
+  padding: 2rem;
+  width: 50%;
+}
+
+.user-name-img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.profile-picture {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 3px solid black;
 }
 
 .profile-info {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+  gap: 1rem;
+}
+.full-name {
+  font-size: 2rem;
+  font-weight: 500;
+}
+.user-mail {
+  font-size: 1.4rem;
 }
 
-.profile-item {
+.break-line {
+  height: 2px;
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+}
+
+.buttons-container {
+  display: flex;
+  gap: 1rem;
+  justify-content: space-around;
+}
+.buttons {
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+  display: block;
+  width: fit-content;
+  transition: transform 300ms ease-in-out;
+  border: none;
+  border-radius: 10px;
+}
+.buttons:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+* {
+  scrollbar-width: 0;
+}
+*::-webkit-scrollbar {
+  background-color: transparent;
+  width: 12px;
+}
+*::-webkit-scrollbar-thumb {
+  border-radius: 99px;
+  background-color: #ddd;
+  border: 4px solid #fff;
+}
+
+.modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
   align-items: center;
-  margin-left: 20px;
-  color: var(--red-color);
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.25);
 }
 
-.profile-item label {
-  font-weight: bold;
-  margin-right: 10px;
-  width: 110px;
-  font-size: 20px;
-}
-
-p {
-  padding: 3px;
-  margin-left: 2px;
-  width: 100%;
-  height: 40px;
-  font-size: 20px;
-  border-radius: 5px;
-  border: 2px solid var(--red-color);
-  background-color: var(--white);
-  color: var(--red-color);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
-  transition: transform 300ms ease-in-out;
-  flex: 0 0 100px;
-  margin-top: 10px;
-}
-
-p:focus {
-  color: var(--green-color);
-  font-weight: bold;
-  outline-color: #e28743;
-}
-
-h1 div {
-  color: var(--green-color);
-  font-weight: bold;
-  outline-color: #e28743;
-}
-
-h1 {
-  text-align: left;
-  padding-bottom: 50px;
-}
-
-.edit-item input{
-  width: 400px;
-  height: 40px;
-  font-size: 20px;
-  border-radius: 5px;
-  border: 2px solid var(--red-color);
-  background-color: var(--white);
-  color: var(--red-color);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
-  transition: transform 300ms ease-in-out;
-  text-align: center;
-  margin-top: 20px;
-}
-
-.edit-profile {
-  margin-top: -30px;
-}
-
-.edit-item label {
-  font-size: 20px;
-  color: var(--red-color);
-  margin-right: 10px;
-  font-weight: bold;
-}
-
-.edit-profile button {
-  width: 400px;
-  height: 40px;
-  font-size: 20px;
-  border-radius: 5px;
-  border: 2px solid var(--red-color);
-  background-color: var(--white);
-  color: var(--red-color);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
-  transition: transform 300ms ease-in-out;
-  margin-top: 70px;
-  margin-left: 30px;
-  text-align: center;
-}
-
-.edit-profile button:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-  border: 2px solid var(--white);
-  background-color: var(--red-color);
-  color: var(--white);
-}
-
-.button-container {
+.modal-container {
+  max-height: 70vh;
+  width: 40vw;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fff;
+  border-radius: 16px;
+  overflow: hidden;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 190px;
-  margin-left: -650px;
+  flex-direction: column;
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.25);
 }
 
-#button,
-.profile-info-button {
-  width: 400px;
-  height: 40px;
-  font-size: 20px;
-  border-radius: 5px;
-  border: 2px solid var(--red-color);
-  background-color: var(--white);
+.modal-container-header {
+  padding: 16px 32px;
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2em;
+}
+
+.modal-container-title {
+  font-weight: 700;
+  font-size: 30px;
+}
+
+.username {
+  color: var(--green-color);
+}
+
+.modal-container-body {
+  padding: 24px 32px 24px;
+  overflow-y: auto;
+}
+
+.recipe-container {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  justify-items: center;
+  align-items: center;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #ddd;
+}
+
+.recipe-img {
+  border-radius: 8px;
+  box-shadow: 5px 5px 5px #ccc;
+}
+
+.edit-btn>button {
+  padding-right: 10px;
+  border: none;
+  background-color: transparent;
+}
+
+.modal-container-footer {
+  padding: 20px 32px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  border-top: 1px solid #ddd;
+  position: relative;
+}
+
+.fa-pen-to-square {
+  color: var(--green-color);
+}
+
+.fa-trash {
   color: var(--red-color);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
+}
+
+.modal-btns {
+  padding: 12px 20px;
+  border-radius: 8px;
+  border: 0;
+  font-weight: 600;
+  cursor: pointer;
   transition: transform 300ms ease-in-out;
+  background-color: var(--red-color);
+  color: #fff;
+}
+
+.modal-btns:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.edit-item {
+  width: fit-content;
+  margin-bottom: 1rem;
+}
+
+.edit-item input {
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.63);
   text-align: center;
-  margin-bottom: 15px;
+  font-size: 1rem;
+  background-color: transparent;
+  color: black;
+}
+.edit-item input:focus-visible {
+  outline: 2px solid #af303094;
+  border-radius: 3px;
+  border-bottom: none;
 }
 
-#button {
-  margin-right: 40px;
+.inputs-container {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
 }
 
-#button:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-  border: 2px solid var(--white);
-  background-color: var(--red-color);
-  color: var(--white);
+.edit-profile-btns-container {
+  display: flex;
+  justify-content: space-around;
 }
-
-.profile-info-button:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-  border: 2px solid var(--white);
-  background-color: var(--red-color);
-  color: var(--white);
-}
-
