--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/all-recipes/all-recipes.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/all-recipes/all-recipes.component.css
@@ -5,6 +5,12 @@ main {
   margin-right: 50px;
 }
 
+.top {
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .title {
   font-size: 50px;
   color: var(--red-color);
@@ -86,20 +92,19 @@ a{
 }
 
 button {
-  margin-bottom: 10px;
   border: 2px solid #B70404;
-  border-radius: 10px;
-  width: 150px;
-  height: 50px;
+  border-radius: 5px;
+  width: 120px;
+  height: 35px;
   background-color: #FFE5CA;
   color: #B70404;
   transition: 300ms ease-in-out;
+  font-weight: bold;
 }
 
 button:hover {
   cursor: pointer;
   transform: scale(1.1);
-  font-weight: bold;
 }
 
 
