--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/signup/signup.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/signup/signup.component.html
@@ -2,7 +2,7 @@
   <img ngSrc="../../assets/images/signup.png" height="500" width="500">
   <div class="right-corner">
     <span class="phrase">Welcome to <a routerLink="/welcome">EasyEats!</a></span>
-    <form #form="ngForm" (ngSubmit)="onSubmit()" class="signup-form">
+    <form #form="ngForm" (ngSubmit)="onSubmit()" class="signup-form" enctype="multipart/form-data">
       <label>
         First name:
         <input placeholder="First name" required [(ngModel)]="request.firstName" name="first_name">
@@ -27,11 +27,6 @@
         Repeat Password:
         <input type="password" placeholder="Repeat password" required [(ngModel)]="user.repeatPass" name="repeatPass" aria-required="true">
       </label> -->
-      <!-- <label>
-        Profile picture:
-        <input type="file" required (change)="onFileChange($event)" accept="image/*">
-      </label> -->
-
 
 
       <!-- <div *ngIf="errorMessage" class="error-message">
