--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
@@ -4,7 +4,7 @@
   <div *ngIf="user && !isEditMode && !isPostMode" class="user">
     <div class="user-name-img">
       <img class="profile-picture" src="{{user.image}}" alt=""/>
-      <h2>{{user.username}}</h2>
+      <h2>{{ user.userName }}</h2>
     </div>
 
     <div *ngIf="!isEditMode && !isPostMode" class="profile-info">
@@ -36,7 +36,7 @@
         <header class="modal-container-header">
           <img ngSrc="{{editedUser.image}}" width="100" height="100">
           <h1 class="modal-container-title">
-            Recipes posted by <span class="username">{{editedUser.username}}</span>
+            Recipes posted by <span class="username">{{editedUser.userName}}</span>
           </h1>
         </header>
         <section class="modal-container-body">
@@ -76,7 +76,7 @@
           </div>
           <div class="edit-item">
             <input
-              [(ngModel)]="editedUser.username"
+              [(ngModel)]="editedUser.userName"
               placeholder="Username"/>
           </div>
           <div class="edit-item">
