--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/welcome-screen/welcome-screen.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/welcome-screen/welcome-screen.component.html
@@ -1,12 +1,12 @@
 <app-header></app-header>
-<body>
-<div class="background">
-  <img src="../../assets/images/background.jpg">
-</div>
-<main>
-  <div class="phrase">
-    The only cooking app you will ever need!
+<div class="all-content">
+  <div class="background">
+    <img src="../../assets/images/background.jpg">
   </div>
-  <button class="sign-up" (click)="redirectToSignUp()">Start cooking now!</button>
-</main>
-</body>
+  <main>
+    <div class="phrase">
+      The only cooking app you will ever need!
+    </div>
+    <button class="sign-up" (click)="redirectToSignUp()">Start cooking now!</button>
+  </main>
+</div>
