Redirecting unauthenticated users

--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/login/login.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/login/login.component.html
@@ -10,5 +10,6 @@
        <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
       <button type="submit">Login</button>
     </form>
+    <div class="signup-text">Don't have an account? <a [routerLink]="['/signup']">Sign up</a></div>
   </div>
 </main>
