--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/login/login.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/login/login.component.css
@@ -78,6 +78,10 @@ button:hover {
 
 a {
   text-decoration: none;
-  color: var(--green-color);
+  color: var(--red-color);
   font-weight: bold;
+}
+
+.signup-text {
+  margin-top: 25px;
 }
