--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <div *ngIf="isPostMode && editedUser">
+  <div *ngIf="isPostMode && editedUser && recipes?.length">
     <div class="modal">
       <div class="modal-container">
         <header class="modal-container-header">
@@ -53,6 +53,16 @@
         <footer class="modal-container-footer">
           <button class="modal-btns" (click)="togglePost()">Close</button>
         </footer>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal" *ngIf="isPostMode && editedUser && !recipes?.length">
+    <div class="modal-no-recipes-content">
+      <div class="modal-text">You haven't posted any recipes yet.</div>
+      <div class="edit-profile-btns-container">
+        <button class="modal-no-recipes-btn" (click)="togglePost()">Close</button>
+        <button class="modal-no-recipes-btn"><a [routerLink]="['/addrecipe']">Add recipe</a></button>
       </div>
     </div>
   </div>
