added user profile picture

--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
@@ -3,6 +3,7 @@
 
   <div *ngIf="user && !isEditMode && !isPostMode" class="user">
     <div class="user-name-img">
+      <input type="file" (change)="onFileChange($event)">
       <img class="profile-picture" src="{{user.image}}" alt=""/>
       <h2>{{ user.userName }}</h2>
     </div>
