--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.css
@@ -24,7 +24,7 @@ main::before {
 
 .user {
   margin-top: 1rem;
-  padding: 2rem;
+  padding-left: 2rem;
   width: 50%;
 }
 
@@ -32,7 +32,15 @@ main::before {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 0.5rem;
+}
+
+
+.custom-file-input {
+  margin-bottom: 1rem;
+  margin-left: 8rem;
+  color: #2980b9;
 }
 
 .profile-picture {
@@ -45,7 +53,7 @@ main::before {
 .profile-info {
   display: flex;
   flex-direction: column;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   gap: 1rem;
 }
 
