--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/recipe/recipe.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/recipe/recipe.component.css
@@ -121,3 +121,14 @@ button:hover {
   transform: scale(1.1);
 }
 
+.profile_picture{
+  height: 30px;
+  width: 30px;
+}
+
+.user_name{
+  margin-top: -70px;
+  margin-left: 40px;
+  margin-bottom: 5px;
+}
+
