--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
@@ -93,7 +93,7 @@
         </div>
           <div class="right-col">
           <div class="edit-item">
-            <input [(ngModel)]="editedUser.email" placeholder="Email"/>
+            <input [(ngModel)]="editedUser.email" placeholder="Email" readonly id="email"/>
           </div>
 
           <div class="edit-item">
