Refactoring the app

--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/edit-recipe/edit-recipe.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/edit-recipe/edit-recipe.component.html
@@ -10,7 +10,8 @@
     </label>
     <label>
       Description:
-      <textarea placeholder="Description" required [(ngModel)]="description" name="description" aria-required="true"></textarea>
+      <textarea placeholder="Description" required [(ngModel)]="description" name="description"
+                aria-required="true"></textarea>
     </label>
     <label>
       Choose category:
