--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/single-category/single-category.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/single-category/single-category.component.html
@@ -3,7 +3,7 @@
 <main>
   <div class="subcategories">
     <div *ngFor="let subCategory of subCategories">
-      <button (click)="onClickOfSubCategory(subCategory.id)">{{subCategory.name}}</button>
+      <button (click)="onClickOfSubCategory(subCategory.id)">#{{subCategory.name}}</button>
     </div>
   </div>
   <div class="card-container">
