--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/all-recipes/all-recipes.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/all-recipes/all-recipes.component.html
@@ -2,12 +2,13 @@
 
 <main>
   <div class="top">
-    <div class="title">Explore all recipes..</div>
-    <a [routerLink]="['/addrecipe']"><button>Add a recipe</button></a>
-  </div>
-  <div class="search">
-    <input type="text" [formControl]='queryText' (input)="search()" placeholder="Search recipes...">
-    <i class="fa-solid fa-magnifying-glass"></i>
+    <div class="title">Explore all recipes</div>
+    <div class="search" [ngClass]="{'show-input': showSearch}">
+      <div class="search-icon" (click)="toggleSearch()">
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </div>
+      <input type="text" [formControl]='queryText' (input)="search()" placeholder="Search recipes..">
+    </div>
   </div>
   <div class="card-container">
     <div *ngFor="let recipe of recipes" class="card">
