--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/welcome-screen/welcome-screen.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/welcome-screen/welcome-screen.component.html
@@ -7,6 +7,7 @@
     <div class="phrase">
       The only cooking app you will ever need!
     </div>
-    <button class="sign-up" (click)="redirectToSignUp()">Start cooking now!</button>
+    <button *ngIf="!isLoggedIn" class="sign-up" (click)="redirectToSignUp()">Start cooking now!</button>
+    <button *ngIf="isLoggedIn" class="sign-up" (click)="redirectToHomePage()">Start cooking now!</button>
   </main>
 </div>
